k8s/azure-backend/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: plug-namespace
  labels:
    plug: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      plug: backend-pods
  template:
    metadata:
      labels:
        plug: backend-pods
    spec:
      containers:
      - name: backend-container
        image: theplug.azurecr.io/latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: secrets-store
          mountPath: "/mnt/secrets-store"
          readOnly: true
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "2048Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /api/herb/list/
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/herb/list/
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
      volumes:
      - name: secrets-store
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "azure-kv-provider"
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
