k8s/azure-backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plug-ingress
  namespace: plug-namespace
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/cache-enabled: "true"
    appgw.ingress.kubernetes.io/cache-duration: "3600"
spec:
  rules:
  -  http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8080
